--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,6 +1,15 @@
 .container {
-	display: flex;
+	display: inline-grid;
+	grid-template-columns: 5rem 1fr 5rem 2rem;
 	grid-column: 1 / -1;
+	gap: 1rem;
+	align-items: center;
 	background-color: var(--color-white);
 	border: 0.1rem solid var(--color-gray);
+	padding: 0 2rem;
+	height: 3rem;
+}
+
+.logo {
+	display: flex;
 }
