--- a/src/components/Card/style.module.css
+++ b/src/components/Card/style.module.css
@@ -1,6 +1,7 @@
 .container {
 	display: flex;
 	flex-direction: column;
+	height: 100%;
 	background-color: var(--color-white);
 	border: 0.1rem solid var(--color-gray);
 	border-radius: 1rem;
