--- a/src/pages/Login/styles.module.css
+++ b/src/pages/Login/styles.module.css
@@ -1,6 +1,7 @@
 .container {
-	display: grid;
-	place-content: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	min-block-size: 100vh;
 }
 
