--- a/src/components/Form/styles.module.css
+++ b/src/components/Form/styles.module.css
@@ -14,6 +14,7 @@
 
 .input {
 	height: 2rem;
+	line-height: 2rem;
 	padding: 0 0.5rem;
 	margin: 0.5rem 0;
 	border: 0.1rem solid var(--color-gray);
