--- a/src/components/Button/style.module.css
+++ b/src/components/Button/style.module.css
@@ -4,7 +4,7 @@
 	justify-content: center;
 	padding: 0.5rem 1rem;
 	border: none;
-	border-radius: 1rem;
+	border-radius: var(--size-radius);
 	cursor: pointer;
 }
 
