--- a/src/components/List/styles.module.css
+++ b/src/components/List/styles.module.css
@@ -9,7 +9,7 @@
 	grid-template-rows: 5rem;
 	align-items: center;
 	padding: 0 1rem;
-	border-radius: 1rem;
+	border-radius: var(--size-radius);
 }
 
 .header {
