--- a/src/components/Toast/styles.module.css
+++ b/src/components/Toast/styles.module.css
@@ -1,10 +1,22 @@
 .container {
+	position: fixed;
+	bottom: 5%;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	width: 50vw;
+	max-width: 35rem;
+}
+
+.wrapper {
 	display: flex;
 	flex-direction: row;
 	gap: 2rem;
 	background-color: var(--color-secondary-light);
 	padding: 1rem 2rem;
-	border-radius: 1rem;
+	border-radius: var(--size-radius);
 	opacity: 0;
 	background-image: linear-gradient(
 		90deg,
