--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -1,7 +1,6 @@
-.footer {
-	position: static;
-	bottom: 0;
+.container {
 	text-align: center;
 	font-size: 0.75rem;
 	color: var(--color-primary);
+	padding: 1rem 0;
 }
