--- a/src/components/Button/style.module.css
+++ b/src/components/Button/style.module.css
@@ -2,6 +2,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	gap: 0.25rem;
 	padding: 0.5rem 1rem;
 	border: none;
 	border-radius: var(--size-radius);
