--- a/src/components/Card/style.module.css
+++ b/src/components/Card/style.module.css
@@ -3,7 +3,6 @@
 	flex-direction: column;
 	height: 100%;
 	background-color: var(--color-white);
-	border: 0.1rem solid var(--color-gray);
 	border-radius: var(--size-radius);
 	padding: 1rem;
 	margin: 1rem;
@@ -13,6 +12,8 @@
 	display: flex;
 	padding-bottom: 0.5rem;
 	border-bottom: 0.1rem solid var(--color-gray);
+	font-size: 1.25rem;
+	font-weight: 700;
 }
 
 .body {
