--- a/src/components/Image/styles.module.css
+++ b/src/components/Image/styles.module.css
@@ -1,4 +1,6 @@
 .container {
-	height: 100%;
+	display: block;
 	max-width: 100%;
+	color: transparent;
+	background-color: var(--color-secondary);
 }
