--- a/src/components/List/styles.module.css
+++ b/src/components/List/styles.module.css
@@ -1,7 +1,7 @@
 .container {
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
+	gap: 0.25rem;
 }
 
 .striped:nth-child(2n + 1) {
@@ -14,14 +14,15 @@
 
 .row {
 	display: grid;
-	grid-template-rows: 5rem;
+	grid-template-rows: 4rem;
 	align-items: center;
 	padding: 0 1rem;
+	border: 0.1rem solid transparent;
 	border-radius: var(--size-radius);
 }
 
 .row:hover {
-	background-color: var(--color-secondary-light);
+	border-color: var(--color-secondary);
 }
 
 .header {
@@ -31,4 +32,5 @@
 
 .cell {
 	display: flex;
+	color: var(--color-primary);
 }
