--- a/src/pages/Gallery/styles.module.css
+++ b/src/pages/Gallery/styles.module.css
@@ -1,8 +1,3 @@
-.upload {
-	flex: 0.5;
-	max-width: 20rem;
-}
-
 .content {
 	flex: 1;
 	max-width: 40rem;
@@ -10,13 +5,8 @@
 }
 
 .thumbnail {
-	width: 4rem;
-	height: 4rem;
-}
-
-.image {
-	width: 100%;
-	height: 100%;
+	width: 3rem;
+	height: 3rem;
 	object-fit: cover;
 }
 
@@ -24,4 +14,5 @@
 	display: flex;
 	justify-content: flex-end;
 	width: 100%;
+	gap: 0.5rem;
 }
