--- a/src/components/Card/style.module.css
+++ b/src/components/Card/style.module.css
@@ -1,7 +1,7 @@
 .container {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
+	height: max-content;
 	background-color: var(--color-white);
 	border-radius: var(--size-radius);
 	padding: 1rem;
