--- a/src/components/Form/Fields/styles.module.css
+++ b/src/components/Form/Fields/styles.module.css
@@ -11,6 +11,7 @@
 .input {
 	height: 2rem;
 	line-height: 2rem;
+	font-size: 0.75rem;
 	padding: 0 0.5rem;
 	margin: 0.5rem 0;
 	border: 0.1rem solid var(--color-gray);
@@ -18,10 +19,18 @@
 	transition: 125ms ease-out;
 }
 
-.input:focus {
+.input:focus,
+.input:hover {
 	outline: none;
 	border-color: var(--color-primary);
 	transition: 125ms ease-in;
+}
+
+.file {
+	display: flex;
+	align-items: center;
+	gap: 0.25rem;
+	cursor: pointer;
 }
 
 .submit {
