--- a/src/components/List/styles.module.css
+++ b/src/components/List/styles.module.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.25rem;
+	color: var(--color-primary);
 }
 
 .striped:nth-child(2n + 1) {
@@ -13,10 +14,12 @@
 }
 
 .row {
-	display: grid;
-	grid-template-rows: 4rem;
+	display: flex;
+	justify-content: space-between;
+	gap: 0.75rem;
+	height: 4rem;
 	align-items: center;
-	padding: 0 1rem;
+	padding: 0 0.5rem;
 	border: 0.1rem solid transparent;
 	border-radius: var(--size-radius);
 }
@@ -31,6 +34,16 @@
 }
 
 .cell {
-	display: flex;
-	color: var(--color-primary);
+	width: 100%;
+}
+
+.grip {
+	width: 2rem;
+	height: 100%;
+	color: var(--color-secondary);
+	cursor: grab;
+}
+
+.dragged {
+	cursor: grabbing;
 }
