--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-.App {
+#root {
 	display: flex;
 	flex-direction: column;
 	min-block-size: 100vh;
