--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,6 +1,6 @@
 .container {
 	display: inline-grid;
-	grid-template-columns: 1fr 5rem 2rem;
+	grid-template-columns: 1fr 1rem 5rem 2rem;
 	grid-column: 1 / -1;
 	gap: 1rem;
 	align-items: center;
@@ -8,4 +8,14 @@
 	border-bottom: 0.1rem solid var(--color-gray);
 	padding: 0 2rem;
 	height: 3rem;
+}
+
+.link {
+	color: var(--color-secondary);
+	transition: 125ms ease-out;
+}
+
+.link:hover {
+	color: var(--color-primary);
+	transition: 125ms ease-in;
 }
