--- a/src/components/Avatar/styles.module.css
+++ b/src/components/Avatar/styles.module.css
@@ -8,6 +8,6 @@
 	text-transform: uppercase;
 	font-size: 0.75rem;
 	background-color: var(--color-secondary);
-	color: var(--color-black);
+	color: var(--color-primary);
 	cursor: default;
 }
