--- a/src/components/Card/style.module.css
+++ b/src/components/Card/style.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	height: max-content;
-	background-color: var(--color-white);
+	background-color: var(--color-tertiary);
 	border-radius: var(--size-radius);
 	padding: 1rem;
 	margin: 1rem;
@@ -11,7 +11,7 @@
 .header {
 	display: flex;
 	padding-bottom: 0.5rem;
-	border-bottom: 0.1rem solid var(--color-gray);
+	border-bottom: 0.1rem solid var(--color-secondary-light);
 	font-size: 1.25rem;
 	font-weight: 700;
 }
