--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -4,8 +4,8 @@
 	grid-column: 1 / -1;
 	gap: 1rem;
 	align-items: center;
-	background-color: var(--color-white);
-	border-bottom: 0.1rem solid var(--color-gray);
+	background-color: var(--color-tertiary);
+	border-bottom: 0.1rem solid var(--color-secondary-light);
 	padding: 0 2rem;
 	height: 3rem;
 }
