--- a/src/components/Input/styles.module.css
+++ b/src/components/Input/styles.module.css
@@ -19,7 +19,7 @@
 	font-size: 0.75rem;
 	padding: 0 0.5rem;
 	margin: 0.5rem 0;
-	border: 0.1rem solid var(--color-gray);
+	border: 0.1rem solid var(--color-secondary-light);
 	border-radius: 0.5rem;
 	transition: 125ms ease-out;
 }
