--- a/src/components/Link/style.module.css
+++ b/src/components/Link/style.module.css
@@ -2,7 +2,7 @@
 	padding: 0.5rem 1rem;
 	border: none;
 	border-radius: var(--size-radius);
-	color: var(--color-black);
+	color: var(--color-primary);
 	background-color: var(--color-secondary);
 	font-size: 0.75rem;
 }
