--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -9,13 +9,13 @@
 	display: flex;
 	align-items: center;
 	padding: 0 1rem;
-	color: var(--color-black);
+	color: var(--color-primary);
 	text-decoration: none;
 	cursor: pointer;
 }
 
 .item:hover {
-	color: var(--color-white);
+	color: var(--color-tertiary);
 	background-color: var(--color-primary);
 	text-decoration: none;
 }
