Add switch input component

--- a/src/components/Input/styles.module.css
+++ b/src/components/Input/styles.module.css
@@ -65,3 +65,47 @@
 	font-size: 0.75rem;
 	color: var(--color-danger);
 }
+
+.switch {
+	position: relative;
+	width: 2rem;
+	height: 1rem;
+}
+
+.switch input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	border-radius: 0.5rem;
+	background-color: var(--color-secondary);
+	transition: 225ms ease-out;
+}
+
+.slider:before {
+	position: absolute;
+	content: '';
+	height: 0.7rem;
+	width: 0.7rem;
+	left: 0.15rem;
+	bottom: 0.15rem;
+	border-radius: 50%;
+	background-color: var(--color-secondary-lighten);
+	transition: 225ms ease-out;
+}
+
+input:checked + .slider {
+	background-color: var(--color-success);
+}
+
+input:checked + .slider:before {
+	transform: translateX(1rem);
+}
