--- a/src/components/Card/style.module.css
+++ b/src/components/Card/style.module.css
@@ -12,6 +12,7 @@
 	display: flex;
 	padding-bottom: 0.5rem;
 	border-bottom: 0.1rem solid var(--color-secondary-light);
+	color: var(--color-primary);
 	font-size: 1.25rem;
 	font-weight: 700;
 }
