--- a/src/components/Input/styles.module.css
+++ b/src/components/Input/styles.module.css
@@ -20,6 +20,8 @@
 	padding: 0 0.5rem;
 	margin: 0.5rem 0;
 	border: 0.1rem solid var(--color-secondary-light);
+	background-color: var(--color-tertiary);
+	color: var(--color-primary);
 	border-radius: 0.5rem;
 	transition: 125ms ease-out;
 }
